feat: continue with header and footer and add JS + icon

--- a/Website/CSS/login.css
+++ b/Website/CSS/login.css
@@ -1,3 +1,10 @@
+#login-window {
+  position: absolute;
+  top: 105px;
+  right: 0%;
+  display: none;
+}
+
 .form-log-in,
 .form-log-in * {
   box-sizing: border-box;
