--- a/Website/CSS/header.css
+++ b/Website/CSS/header.css
@@ -78,7 +78,7 @@ header {
   width: 100%;
   position: fixed;
   top: 0px;
-  overflow: hidden;
+  overflow: visible;
 }
 .button-container {
   display: flex;
