--- a/Website/CSS/register.css
+++ b/Website/CSS/register.css
@@ -1,3 +1,10 @@
+#register-window {
+  position: absolute;
+  top: 105px;
+  right: 0%;
+  display: none;
+}
+
 .form-register,
 .form-register * {
   box-sizing: border-box;
@@ -81,37 +88,6 @@
   align-self: stretch;
   flex-shrink: 0;
   position: relative;
-}
-.checkbox-and-label {
-  display: flex;
-  flex-direction: row;
-  gap: var(--var-sds-size-space-300, 12px);
-  align-items: center;
-  justify-content: flex-start;
-  align-self: stretch;
-  flex-shrink: 0;
-  position: relative;
-}
-.checkbox {
-  background: var(--var-sds-color-background-brand-default, #2c2c2c);
-  border-radius: var(--var-sds-size-radius-100, 4px);
-  display: flex;
-  flex-direction: row;
-  gap: 10px;
-  align-items: center;
-  justify-content: center;
-  flex-shrink: 0;
-  width: 16px;
-  height: 16px;
-  position: relative;
-  overflow: hidden;
-}
-.check {
-  flex-shrink: 0;
-  width: 16px;
-  height: 16px;
-  position: relative;
-  overflow: visible;
 }
 .label2 {
   color: var(--var-sds-color-text-default-default, #1e1e1e);
