--- a/Website/CSS/reset_pwd.css
+++ b/Website/CSS/reset_pwd.css
@@ -1,3 +1,10 @@
+#forgot-password {
+  position: absolute;
+  top: 105px;
+  right: 0%;
+  display: none;
+}
+
 .form-forgot-password,
 .form-forgot-password * {
   box-sizing: border-box;
@@ -14,6 +21,7 @@
   gap: var(--var-sds-size-space-600, 24px);
   align-items: flex-end;
   justify-content: flex-start;
+  width: 320px;
   min-width: 320px;
   position: relative;
 }
