--- a/Website/CSS/about.css
+++ b/Website/CSS/about.css
@@ -1,689 +1,67 @@
-.frame-20,
-.frame-20 * {
-  box-sizing: border-box;
+body {
+  background-image: url(/img/about/wood.png);
+  background-size: cover;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
 }
-.frame-20 {
-  height: 1284px;
-  position: relative;
-}
-.image-12 {
-  width: 1200px;
-  height: 1103px;
-  position: absolute;
-  left: 0px;
-  top: 76px;
-  filter: blur(2px);
-  object-fit: cover;
-}
-.group-20 {
-  position: absolute;
-  inset: 0;
-}
-.group-18 {
-  width: 1200px;
-  height: 96px;
-  position: static;
-}
-.group-7 {
-  width: 1200px;
-  height: 96px;
-  position: static;
-}
-.header {
-  background: var(--var-sds-color-background-positive-secondary, #cff7d3);
-  border-style: solid;
-  border-color: var(--var-sds-color-border-default-default, #d9d9d9);
-  border-width: 0px 0px 1px 0px;
-  padding: var(--var-sds-size-space-800, 32px);
+nav ul {
+  list-style: none;
   display: flex;
-  flex-direction: row;
-  gap: var(--var-sds-size-space-600, 24px);
-  row-gap: 0px;
-  align-items: center;
-  justify-content: flex-start;
-  flex-wrap: wrap;
-  align-content: center;
-  width: var(--var-sds-responsive-device-width, 1200px);
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  overflow: hidden;
+  gap: 15px;
+  margin: 0;
+  padding: 0;
 }
-.navigation-pill-list {
-  display: flex;
-  flex-direction: row;
-  gap: var(--var-sds-size-space-200, 8px);
-  row-gap: 8px;
-  align-items: flex-start;
-  justify-content: flex-end;
-  flex-wrap: wrap;
-  align-content: flex-start;
-  flex: 1;
-  position: relative;
+nav a {
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
 }
-.navigation-pill {
-  border-radius: var(--var-sds-size-radius-200, 8px);
-  padding: var(--var-sds-size-space-200, 8px);
-  display: flex;
-  flex-direction: row;
-  gap: var(--var-sds-size-space-200, 8px);
-  align-items: center;
+button {
+  border: none;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+main {
+  padding: 20px;
+  text-align: center;
+}
+h1 {
+  text-align: center;
   justify-content: center;
-  flex-shrink: 0;
-  position: relative;
-}
-.title {
-  color: var(--var-sds-color-text-default-default, #1e1e1e);
-  text-align: left;
-  font-family: var(
-    --single-line-body-base-font-family,
-    "Inter-Regular",
-    sans-serif
-  );
-  font-size: var(--single-line-body-base-font-size, 16px);
-  line-height: var(--single-line-body-base-line-height, 100%);
-  font-weight: var(--single-line-body-base-font-weight, 400);
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-}
-.header-auth {
-  display: flex;
-  flex-direction: row;
-  gap: var(--var-sds-size-space-300, 12px);
-  align-items: center;
-  justify-content: flex-start;
-  flex-shrink: 0;
-  position: relative;
-}
-.button {
-  background: var(--var-sds-color-background-neutral-tertiary, #e3e3e3);
-  border-radius: var(--var-sds-size-radius-200, 8px);
-  border-style: solid;
-  border-color: var(--var-sds-color-border-neutral-secondary, #767676);
-  border-width: 1px;
-  padding: var(--var-sds-size-space-200, 8px);
-  display: flex;
-  flex-direction: row;
-  gap: var(--var-sds-size-space-200, 8px);
-  align-items: center;
-  justify-content: center;
-  flex-shrink: 0;
-  position: relative;
-  overflow: hidden;
-}
-.button2 {
-  color: var(--var-sds-color-text-default-default, #1e1e1e);
-  text-align: left;
-  font-family: var(
-    --single-line-body-base-font-family,
-    "Inter-Regular",
-    sans-serif
-  );
-  font-size: var(--single-line-body-base-font-size, 16px);
-  line-height: var(--single-line-body-base-line-height, 100%);
-  font-weight: var(--single-line-body-base-font-weight, 400);
-  position: relative;
-}
-.button3 {
-  background: var(--var-sds-color-background-brand-default, #2c2c2c);
-  border-radius: var(--var-sds-size-radius-200, 8px);
-  border-style: solid;
-  border-color: var(--var-sds-color-border-brand-default, #2c2c2c);
-  border-width: 1px;
-  padding: var(--var-sds-size-space-200, 8px);
-  display: flex;
-  flex-direction: row;
-  gap: var(--var-sds-size-space-200, 8px);
-  align-items: center;
-  justify-content: center;
-  flex-shrink: 0;
-  position: relative;
-  overflow: hidden;
-}
-.button4 {
-  color: var(--var-sds-color-text-brand-on-brand, #f5f5f5);
-  text-align: left;
-  font-family: var(
-    --single-line-body-base-font-family,
-    "Inter-Regular",
-    sans-serif
-  );
-  font-size: var(--single-line-body-base-font-size, 16px);
-  line-height: var(--single-line-body-base-line-height, 100%);
-  font-weight: var(--single-line-body-base-font-weight, 400);
-  position: relative;
-}
-.group-6 {
-  width: 201px;
-  height: 96px;
-  position: static;
-}
-.group-1 {
-  width: 97px;
-  height: 96px;
-  position: static;
-}
-.logo-1 {
-  width: 97px;
-  height: 96px;
-  position: absolute;
-  left: 0px;
-  top: 0px;
-}
-.logo-12 {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  right: 0%;
-  left: 0%;
-  bottom: 0%;
-  top: 0%;
-  object-fit: cover;
-}
-.unplugged {
-  color: var(--var-sds-color-text-default-default, #1e1e1e);
-  text-align: left;
-  font-family: var(--heading-font-family, "Inter-SemiBold", sans-serif);
-  font-size: var(--heading-font-size, 24px);
-  line-height: var(--heading-line-height, 120%);
-  letter-spacing: var(--heading-letter-spacing, -0.02em);
-  font-weight: var(--heading-font-weight, 600);
-  position: absolute;
-  left: 80px;
-  top: 33px;
-}
-.footer {
-  background: var(--var-sds-color-background-default-default, #ffffff);
-  border-style: solid;
-  border-color: var(--var-sds-color-border-default-default, #d9d9d9);
-  border-width: 1px 0px 0px 0px;
-  padding: var(--var-sds-size-space-800, 32px)
-    var(--var-sds-size-space-800, 32px) var(--var-sds-size-space-4000, 160px)
-    var(--var-sds-size-space-800, 32px);
-  display: flex;
-  flex-direction: row;
-  gap: var(--var-sds-size-space-400, 16px);
-  row-gap: 16px;
-  align-items: flex-start;
-  justify-content: flex-start;
-  flex-wrap: wrap;
-  align-content: flex-start;
-  width: 1200px;
-  height: 105px;
-  position: absolute;
-  left: 0px;
-  top: 1179px;
-  overflow: hidden;
-}
-.frame-3 {
-  flex-shrink: 0;
-  width: 28px;
-  height: 23.72px;
-  position: absolute;
-  left: 149px;
-  top: 32px;
-}
-.group-13 {
-  position: absolute;
-  inset: 0;
-}
-.group-12 {
-  width: 144px;
-  height: 26px;
-  position: static;
-}
-.group-11 {
-  width: 144px;
-  height: 26px;
-  position: static;
-}
-.image-3 {
-  width: 26px;
-  height: 26px;
-  position: absolute;
-  left: 1px;
-  top: -1px;
-  object-fit: cover;
-}
-.litec-1 {
-  width: 26px;
-  height: 26px;
-  position: absolute;
-  left: -117px;
-  top: -1px;
-  object-fit: cover;
-}
-.title2 {
-  display: flex;
-  flex-direction: column;
-  gap: var(--var-sds-size-space-600, 24px);
-  align-items: flex-start;
-  justify-content: flex-start;
-  flex-shrink: 0;
-  width: 262px;
-  min-width: 240px;
-  position: relative;
-}
-.button-list {
-  display: flex;
-  flex-direction: row;
-  gap: var(--var-sds-size-space-400, 16px);
-  align-items: center;
-  justify-content: flex-start;
-  flex-shrink: 0;
-  position: relative;
-}
-.x-logo {
-  flex-shrink: 0;
-  width: 23.98px;
-  height: 24px;
-  position: relative;
-}
-.logo-instagram {
-  flex-shrink: 0;
-  width: 24px;
-  height: 24px;
-  position: relative;
-  overflow: visible;
-}
-.logo-you-tube {
-  flex-shrink: 0;
-  width: 24px;
-  height: 24px;
-  position: relative;
-  overflow: visible;
-}
-.text-link-list {
-  display: flex;
-  flex-direction: column;
-  gap: var(--var-sds-size-space-300, 12px);
-  align-items: flex-start;
-  justify-content: flex-start;
-  flex-shrink: 0;
-  width: 262px;
-  position: relative;
-}
-.title3 {
-  padding: 0px 0px var(--var-sds-size-space-400, 16px) 0px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  align-items: flex-start;
-  justify-content: flex-start;
-  align-self: stretch;
-  flex-shrink: 0;
-  position: relative;
-}
-.text-strong {
-  display: flex;
-  flex-direction: row;
-  gap: 0px;
-  align-items: flex-start;
-  justify-content: flex-start;
-  align-self: stretch;
-  flex-shrink: 0;
-  position: relative;
-}
-.text-strong2 {
-  color: var(--var-sds-color-text-default-default, #1e1e1e);
-  text-align: left;
-  font-family: var(--body-strong-font-family, "Inter-SemiBold", sans-serif);
-  font-size: var(--body-strong-font-size, 16px);
-  line-height: var(--body-strong-line-height, 140%);
-  font-weight: var(--body-strong-font-weight, 600);
-  position: relative;
-}
-.group-19 {
-  flex-shrink: 0;
-  width: 197px;
-  height: 100px;
-  position: static;
-}
-.logo-bw-1 {
-  width: 100px;
-  height: 100px;
-  position: absolute;
-  left: 979px;
-  top: -10px;
-  object-fit: cover;
-}
-.group-10 {
-  width: 127px;
-  height: 29px;
-  position: static;
-}
-.unplugged2 {
-  color: #000000;
-  text-align: left;
-  font-family: "Inter-Bold", sans-serif;
-  font-size: 24px;
-  line-height: 120%;
-  font-weight: 700;
-  position: absolute;
-  left: 1049px;
-  top: 25px;
-}
-.group-14 {
-  width: 194px;
-  height: 20px;
-  position: static;
-}
-.copyright-2025-unplugged {
-  color: #000000;
-  text-align: left;
-  font-family: var(--body-small-font-family, "Inter-Regular", sans-serif);
-  font-size: var(--body-small-font-size, 14px);
-  line-height: var(--body-small-line-height, 140%);
-  font-weight: var(--body-small-font-weight, 400);
-  position: absolute;
-  left: 982px;
-  top: 53px;
-}
-.image-4 {
-  width: 14px;
-  height: 14px;
-  position: absolute;
-  right: 135px;
-  top: 56px;
-  object-fit: cover;
-}
-.group-21 {
-  position: absolute;
-  inset: 0;
-}
-.cards {
-  display: flex;
-  flex-direction: column;
-  gap: var(--var-sds-size-space-600, 24px);
-  align-items: flex-start;
-  justify-content: flex-start;
-  width: 1072px;
-  position: absolute;
-  left: 69px;
-  top: 253px;
-}
-.card {
-  background: var(--var-sds-color-background-default-default, #ffffff);
-  border-radius: var(--var-sds-size-radius-200, 8px);
-  border-style: solid;
-  border-color: var(--var-sds-color-border-default-default, #d9d9d9);
-  border-width: 1px;
-  padding: var(--var-sds-size-space-600, 24px);
-  display: flex;
-  flex-direction: row;
-  gap: var(--var-sds-size-space-600, 24px);
-  row-gap: 24px;
-  align-items: flex-start;
-  justify-content: flex-start;
-  flex-wrap: wrap;
-  align-content: flex-start;
-  align-self: stretch;
-  flex-shrink: 0;
-  min-width: 240px;
-  position: relative;
-}
-.image-8 {
-  flex-shrink: 0;
-  width: 160px;
-  height: 160px;
-  position: relative;
-  object-fit: cover;
-}
-.body {
-  display: flex;
-  flex-direction: column;
-  gap: var(--var-sds-size-space-400, 16px);
-  align-items: flex-start;
-  justify-content: flex-start;
-  flex: 1;
-  min-width: 160px;
-  position: relative;
-}
-.text {
-  display: flex;
-  flex-direction: column;
-  gap: var(--var-sds-size-space-200, 8px);
-  align-items: flex-start;
-  justify-content: flex-start;
-  align-self: stretch;
-  flex-shrink: 0;
-  position: relative;
-}
-.florian-kaltenbrunner {
-  color: var(--var-sds-color-text-default-default, #1e1e1e);
-  text-align: left;
-  font-family: var(--heading-font-family, "Inter-SemiBold", sans-serif);
-  font-size: var(--heading-font-size, 24px);
-  line-height: var(--heading-line-height, 120%);
-  letter-spacing: var(--heading-letter-spacing, -0.02em);
-  font-weight: var(--heading-font-weight, 600);
-  position: relative;
-  align-self: stretch;
-}
-.ich-besuche-das-linzer-technikum-4-ahit-des-weiteren-bin-ich-mitgr-nder-und-einer-der-beiden-entwickler-der-website-von-unplugged-sp-ter-m-chte-ich-meine-ausbildung-im-rahmen-eines-studiums-fortsetzen-ganz-okay-wird-der-der-1000-sachen-einmal-probiert-doch-perfekt-nur-der-der-eine-sache-1000-mal-trainiert {
-  color: var(--var-sds-color-text-default-secondary, #757575);
-  text-align: left;
-  font-family: var(--body-base-font-family, "Inter-Regular", sans-serif);
-  font-size: var(--body-base-font-size, 16px);
-  line-height: var(--body-base-line-height, 140%);
-  font-weight: var(--body-base-font-weight, 400);
-  position: relative;
-  align-self: stretch;
-}
-.card2 {
-  background: var(--var-sds-color-background-default-default, #ffffff);
-  border-radius: var(--var-sds-size-radius-200, 8px);
-  border-style: solid;
-  border-color: var(--var-sds-color-border-default-default, #d9d9d9);
-  border-width: 1px;
-  padding: var(--var-sds-size-space-600, 24px);
-  display: flex;
-  flex-direction: row;
-  gap: var(--var-sds-size-space-600, 24px);
-  row-gap: 24px;
-  align-items: flex-start;
-  justify-content: flex-start;
-  flex-wrap: wrap;
-  align-content: flex-start;
-  align-self: stretch;
-  flex-shrink: 0;
-  min-width: 240px;
-  position: relative;
-  transform-origin: 0 0;
-  transform: rotate(0deg) scale(-1, 1);
-}
-.image-7 {
-  flex-shrink: 0;
-  width: 160px;
-  height: 159.07px;
-  position: relative;
-  transform-origin: 0 0;
-  transform: rotate(0deg) scale(-1, 1);
-  object-fit: cover;
-}
-.body2 {
-  display: flex;
-  flex-direction: column;
-  gap: var(--var-sds-size-space-400, 16px);
-  align-items: flex-start;
-  justify-content: flex-start;
-  flex: 1;
-  min-width: 160px;
-  position: relative;
-  transform-origin: 0 0;
-  transform: rotate(0deg) scale(-1, 1);
-}
-.joel-kalkusch {
-  color: var(--var-sds-color-text-default-default, #1e1e1e);
-  text-align: left;
-  font-family: var(--heading-font-family, "Inter-SemiBold", sans-serif);
-  font-size: var(--heading-font-size, 24px);
-  line-height: var(--heading-line-height, 120%);
-  letter-spacing: var(--heading-letter-spacing, -0.02em);
-  font-weight: var(--heading-font-weight, 600);
-  position: relative;
-  align-self: stretch;
-}
-.hey-ich-bin-joel-kalkusch-und-bin-sch-ler-des-linzer-technikums-ich-agiere-als-entwickler-und-bin-einer-der-gr-nder-von-unplugged-ich-gehe-in-die-4-klasse-informationstechnologie-und-bin-19-jahre-alt-trauer-ist-der-beweis-dass-man-gl-cklich-war-und-wer-einmal-gl-cklich-war-kann-es-wieder-sein {
-  color: var(--var-sds-color-text-default-secondary, #757575);
-  text-align: left;
-  font-family: var(--body-base-font-family, "Inter-Regular", sans-serif);
-  font-size: var(--body-base-font-size, 16px);
-  line-height: var(--body-base-line-height, 140%);
-  font-weight: var(--body-base-font-weight, 400);
-  position: relative;
-  align-self: stretch;
-}
-.image {
-  background: var(
-    --image-placeholder,
-    linear-gradient(to left, #e3e3e3, #e3e3e3)
-  );
-  display: flex;
-  flex-direction: column;
-  gap: 0px;
-  align-items: center;
-  justify-content: center;
-  flex-shrink: 0;
-  width: 160px;
-  height: 160px;
-  min-width: 160px;
-  position: relative;
-  overflow: hidden;
-}
-.whats-app-bild-2025-02-01-um-22-33-53-28-ce-8-a-97-1 {
-  flex-shrink: 0;
-  width: 160px;
-  height: 160px;
-  position: relative;
-  object-fit: cover;
-}
-.miriam-aistleitner {
-  color: var(--var-sds-color-text-default-default, #1e1e1e);
-  text-align: left;
-  font-family: var(--heading-font-family, "Inter-SemiBold", sans-serif);
-  font-size: var(--heading-font-size, 24px);
-  line-height: var(--heading-line-height, 120%);
-  letter-spacing: var(--heading-letter-spacing, -0.02em);
-  font-weight: var(--heading-font-weight, 600);
-  position: relative;
-  align-self: stretch;
-}
-.body-text-for-whatever-you-d-like-to-say-add-main-takeaway-points-quotes-anecdotes-or-even-a-very-very-short-story {
-  color: var(--var-sds-color-text-default-secondary, #757575);
-  text-align: left;
-  font-family: var(--body-base-font-family, "Inter-Regular", sans-serif);
-  font-size: var(--body-base-font-size, 16px);
-  line-height: var(--body-base-line-height, 140%);
-  font-weight: var(--body-base-font-weight, 400);
-  position: relative;
-  align-self: stretch;
-}
-.frame-19 {
-  width: 1092px;
-  height: 228px;
-  position: absolute;
-  left: 1151px;
-  top: 941px;
-  transform-origin: 0 0;
-  transform: rotate(0deg) scale(-1, 1);
-}
-.frame-7 {
+  background: rgba(255, 255, 255, 0.4);
+  background-repeat: no-repeat;
+  display: inline-block;
   padding: 10px;
-  width: 1092px;
-  height: 228px;
-  position: absolute;
-  left: 0px;
-  top: 0px;
+  border-radius: 5px;
 }
-.card3 {
-  background: var(--var-sds-color-background-default-default, #ffffff);
-  border-radius: var(--var-sds-size-radius-200, 8px);
-  border-style: solid;
-  border-color: var(--var-sds-color-border-default-default, #d9d9d9);
-  border-width: 1px;
-  padding: var(--var-sds-size-space-600, 24px);
-  display: flex;
-  flex-direction: row;
-  gap: var(--var-sds-size-space-600, 24px);
-  row-gap: 24px;
-  align-items: flex-start;
-  justify-content: flex-start;
-  flex-wrap: wrap;
-  align-content: flex-start;
-  width: 1072px;
-  min-width: 240px;
-  position: absolute;
-  left: 10px;
-  top: 10px;
-}
-.image2 {
-  background: var(
-    --image-placeholder,
-    linear-gradient(to left, #e3e3e3, #e3e3e3)
-  );
+.profiles {
   display: flex;
   flex-direction: column;
-  gap: 0px;
+  gap: 20px;
+}
+.profile {
+  display: flex;
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   align-items: center;
-  justify-content: center;
-  flex-shrink: 0;
-  width: 160px;
-  height: 160px;
-  min-width: 160px;
-  position: relative;
-  overflow: hidden;
-  object-fit: cover;
 }
-.body3 {
-  background: #ffffff;
-  display: flex;
-  flex-direction: column;
-  gap: var(--var-sds-size-space-400, 16px);
-  align-items: flex-start;
-  justify-content: flex-start;
-  flex: 1;
-  min-width: 160px;
-  position: relative;
-  transform-origin: 0 0;
-  transform: rotate(0deg) scale(-1, 1);
+.profile img {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
 }
-.mario-steinbauer {
-  color: var(--var-sds-color-text-default-default, #1e1e1e);
-  text-align: left;
-  font-family: var(--heading-font-family, "Inter-SemiBold", sans-serif);
-  font-size: var(--heading-font-size, 24px);
-  line-height: var(--heading-line-height, 120%);
-  letter-spacing: var(--heading-letter-spacing, -0.02em);
-  font-weight: var(--heading-font-weight, 600);
-  position: relative;
-  align-self: stretch;
+.img1 {
+  flex-direction: row;
 }
-.text-content-heading {
-  background: rgba(0, 0, 0, 0.64);
-  display: flex;
-  flex-direction: column;
-  gap: var(--var-sds-size-space-200, 8px);
-  align-items: flex-start;
-  justify-content: flex-start;
-  position: absolute;
-  left: 80px;
-  top: 164px;
+.img1 img {
+  margin-right: 20px;
 }
-.ber-uns {
-  color: #ffffff;
-  text-align: left;
-  font-family: var(
-    --var-sds-typography-heading-font-family,
-    "Inter-SemiBold",
-    sans-serif
-  );
-  font-size: var(--var-sds-typography-subtitle-size-large, 40px);
-  line-height: 120%;
-  letter-spacing: -0.02em;
-  font-weight: var(--var-sds-typography-heading-font-weight, 600);
-  position: relative;
-  align-self: stretch;
+.img2 {
+  flex-direction: row-reverse;
+}
+.img2 img {
+  margin-left: 20px;
 }
