--- a/Website/CSS/loc_short.css
+++ b/Website/CSS/loc_short.css
@@ -1,3 +1,10 @@
+main {
+  margin-top: 7%;
+  padding: 3px;
+  width: 100%;
+  position: relative;
+  min-height: fit-content;
+}
 body {
   background-image: url(/img/loc_short/leaf_bg.png);
   background-color: black;
