changed: file names

--- a/Website/CSS/about.css
+++ b/Website/CSS/about.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(/img/about/wood.png);
+  background-image: url(../img/about/wood.png);
   background-size: cover;
   font-family: Arial, sans-serif;
   margin: 0;
