--- a/Website/CSS/contact.css
+++ b/Website/CSS/contact.css
@@ -7,6 +7,12 @@ body {
 main {
   text-align: left;
   padding: 50px;
+  margin-top: 9%;
+  margin-bottom: 2%;
+  padding: 3px;
+  width: 100%;
+  position: relative;
+  min-height: fit-content;
 }
 h1 {
   text-align: center;
@@ -21,7 +27,7 @@ form {
   flex-direction: column;
   align-items: center;
 }
-label, input, textarea, button {
+label, input, textarea, .submit-btn {
   display: block;
   width: 100%;
   margin-bottom: 10px;
@@ -39,7 +45,7 @@ textarea {
 textarea:focus {
   height: auto;
 }
-button {
+.submit-btn {
   background-color: black;
   color: white;
   padding: 10px;
