--- a/Website/CSS/index.css
+++ b/Website/CSS/index.css
@@ -110,6 +110,7 @@ main {
   flex-shrink: 0;
   position: relative;
   overflow: hidden;
+  cursor: pointer;
 }
 .search-button-text {
   color: var(--var-sds-color-text-brand-on-brand, #f5f5f5);
