--- a/Website/CSS/contact.css
+++ b/Website/CSS/contact.css
@@ -16,6 +16,7 @@ main {
 }
 h1 {
   text-align: center;
+  margin-bottom: 20px;
 }
 form {
   background: white;
@@ -27,12 +28,12 @@ form {
   flex-direction: column;
   align-items: center;
 }
-label, input, textarea, .submit-btn {
+label, .contact-input, textarea, .submit-btn {
   display: block;
   width: 100%;
   margin-bottom: 10px;
 }
-input, textarea {
+.contact-input, textarea {
   padding: 8px;
   border: 1px solid #ccc;
   border-radius: 5px;
