--- a/Website/CSS/about.css
+++ b/Website/CSS/about.css
@@ -30,7 +30,10 @@ button {
   cursor: pointer;
 }
 main {
-  padding: 20px;
+  padding-top: 30px;
+  padding-bottom: 20px;
+  padding-left: 100px;
+  padding-right: 100px;
   text-align: center;
 }
 h1 {
@@ -41,6 +44,7 @@ h1 {
   display: inline-block;
   padding: 10px;
   border-radius: 5px;
+  margin-bottom: 10px;
 }
 .profiles {
   display: flex;
