--- a/Website/CSS/about.css
+++ b/Website/CSS/about.css
@@ -44,12 +44,13 @@ h1 {
   display: inline-block;
   padding: 10px;
   border-radius: 5px;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
+  font-size: 2.5em;
 }
 .profiles {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 50px;
 }
 .profile {
   display: flex;
@@ -63,6 +64,9 @@ h1 {
   width: 120px;
   height: 120px;
   border-radius: 50%;
+}
+.last-profile {
+  margin-bottom: 50px;
 }
 .img1 {
   flex-direction: row;
